--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <script src="build/js/vendor.min.js"></script>
     <script type="text/javascript" src="build/js/app.js"></script>
     <meta charset="utf-8">
-    <title></title>
+    <title>Time Menu</title>
   </head>
   <body>
-
+    <section id="input-form-section">
+      <form id="input-date">
+        <input type="date" id="date-input">
+        <button type="submit" id="form-btn">Submit</button>
+      </form>
+    </section>
+    <span id="you-time"></span>
+    <span id="mercury"></span>
+    <span id="mercury-time"></span>
+    <span id="venus"></span>
+    <span id="venus-time"></span>
+    <span id="mars"></span>
+    <span id="mars-time"></span>
+    <span id="jupiter"></span>
+    <span id="jupiter-time"></span>
   </body>
 </html>
