had to fix spex test inputs

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <section id="input-form-section">
       <form id="input-date">
-        <input type="date" id="date-input">
+        <input type="date" id="date-input-born">
         <button type="submit" id="form-btn">Submit</button>
       </form>
     </section>
